[DEV-2698] fixing homepg mobile issue where the p tag  was overflowing its container

--- a/src/_scss/pages/homepage/hero/_covid-hero.scss
+++ b/src/_scss/pages/homepage/hero/_covid-hero.scss
@@ -48,6 +48,7 @@
                     @include display(flex);
                     @include flex-wrap(wrap);
                     font-size: rem(30);
+                    margin-bottom: 0;
                     .covid-hero__headline--amount {
                         opacity: 0;
                         position: absolute;
